src/test/deca/context/valid/tests/25_NoOperation.deca

// Description:
//    Test le NoOperation
//
// Historique:
//    cree le 16/01/2022

{
        
        int x;
        ;
}
